--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
+                    <finalName>compiler</finalName>
                     <archive>
                         <manifest>
                             <mainClass>com.uepb.Main</mainClass>
