Refatorado class Token, melhorado exceções e corrigido build

--- a/compiler-manual/pom.xml
+++ b/compiler-manual/pom.xml
@@ -14,52 +14,36 @@
     </properties>
 
     <build>
-        <plugins>
+      <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.12.1</version>
-            <configuration>
-              <encoding>UTF-8</encoding>
-              <source>17</source>
-              <target>17</target>
-            </configuration>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.12.1</version>
+              <configuration>
+                  <encoding>UTF-8</encoding>
+              </configuration>
           </plugin>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-resources-plugin</artifactId>
-            <version>3.3.1</version>
-            <configuration>
-              <encoding>UTF-8</encoding>
-            </configuration>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>3.3.1</version>
+              <configuration>
+                  <encoding>UTF-8</encoding>
+              </configuration>
           </plugin>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>3.3.0</version>
-            <configuration>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-              <archive>
-                <manifest>
-                  <mainClass>com.uepb.Main</mainClass>
-                </manifest>
-              </archive>
-              <appendAssemblyId>false</appendAssemblyId>
-              <finalName>compiler</finalName>
-            </configuration>
-            <executions>
-              <execution>
-                <id>make-assembly</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>single</goal>
-                </goals>
-              </execution>
-            </executions>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>3.1.0</version>
+              <configuration>
+                  <archive>
+                      <manifest>
+                          <mainClass>com.uepb.Main</mainClass>
+                      </manifest>
+                  </archive>
+                  <finalName>compiler</finalName>
+              </configuration>
           </plugin>
-        </plugins>
-      </build>
-
+      </plugins>
+  </build>
 </project>
