--- a/expressoes/pom.xml
+++ b/expressoes/pom.xml
@@ -2,16 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tiduswr</groupId>
     <artifactId>expressoes</artifactId>
     <version>1</version>
     <name>expressoes</name>
     <packaging>jar</packaging>
+
     <properties>
         <antlr4.version>4.9.2</antlr4.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
+    
     <dependencies>
         <dependency>
             <groupId>org.antlr</groupId>
@@ -19,6 +24,7 @@
             <version>${antlr4.version}</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -34,9 +40,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <arguments>
-                        <argument>-visitor</argument>
-                    </arguments>
+                    <visitor>true</visitor>
                 </configuration>
             </plugin>
             <plugin>
