simplifica o compilador para uso na segunda unidade da disciplina de compiladores

--- a/pcodemachine/pom.xml
+++ b/pcodemachine/pom.xml
@@ -45,7 +45,7 @@
                         </manifest>
                     </archive>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>compiler</finalName>
+                    <finalName>pcode</finalName>
                 </configuration>
                 <executions>
                     <execution>
